--- a/RUSHE/app/src/main/AndroidManifest.xml
+++ b/RUSHE/app/src/main/AndroidManifest.xml
@@ -24,6 +24,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".MainMenuActivity"
+            android:label=""
+            />
+        <activity
+            android:name=".RegisterActivity"
+            android:label=""
+            />
     </application>
 
 </manifest>
